force-app/main/default/objects/CD_Property__c/fields/RedListed_Since__c.field-meta.xml
<CustomField>
    <fullName>RedListed_Since__c</fullName>
    <formula>TODAY() - DATEVALUE(CD_Red_List_till_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days passed since redlisted date and redlist till date.</inlineHelpText>
    <label>RedListed Since</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>