force-app/main/default/objects/CD_Property__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <formula>IF(
(ISPICKVAL(Status__c, &apos;Sold&apos;) &amp;&amp; ( $User.ProfileId  == &apos;00e1t000000HkGa&apos; || $User.ProfileId  == &apos;00e3X000001RysS&apos;)) || 
((CD_Project__c   == &apos;a2D7T000000tjS4&apos;  || CD_Project__c   == &apos;a2D7T000000tjpa&apos;) &amp;&amp; ( $User.ProfileId  == &apos;00e1t000000HkGa&apos; || $User.ProfileId  == &apos;00e3X000001RysS&apos;))
,Null
,CD_Sales_Price__c
)</formula>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>