force-app/main/default/objects/CD_Property__c/fields/Sold_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sold_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units2</relationshipName>
    <type>Lookup</type>
</CustomField>