force-app/main/default/objects/CD_Property__c/fields/Sold_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date_Time__c</fullName>
    <label>Sold Date Time</label>
    <type>DateTime</type>
</CustomField>