force-app/main/default/objects/CD_Property__c/fields/Split_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Split_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>