force-app/main/default/objects/CD_Property__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <inlineHelpText>Drls Aggregate result field of Sum of Amount where Payment type != &apos;Dld Fee&apos;</inlineHelpText>
    <label>Total Amount Paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>