force-app/main/default/objects/CD_Property__c/fields/Total_Amount_Remains__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Remains__c</fullName>
    <formula>CD_Final_net_price__c - Total_Amount_Paid__c</formula>
    <label>Total Amount Remains</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>