force-app/main/default/objects/CD_Property__c/fields/Total_Area_SQ_FT__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_SQ_FT__c</fullName>
    <label>Total Area SQ.FT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>