force-app/main/default/objects/CD_Property__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>CD_Unit_Number__c</formula>
    <label>Unit Number(F)</label>
    <type>Text</type>
</CustomField>