force-app/main/default/objects/CD_Property__c/fields/Unit_Numberr__c.field-meta.xml
<CustomField>
    <fullName>Unit_Numberr__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id ,CD_Unit_Number__c, &quot;_self&quot;)</formula>
    <label>Unit Number (HL)</label>
    <type>Text</type>
</CustomField>