force-app/main/default/objects/CD_Property__c/fields/Unit_Series__c.field-meta.xml
<CustomField>
    <fullName>Unit_Series__c</fullName>
    <description>Last Two digit of Unit Number</description>
    <formula>Right( CD_Unit_Number__c , 2)</formula>
    <inlineHelpText>Last Two digit of Unit Number</inlineHelpText>
    <label>Unit Series</label>
    <type>Text</type>
</CustomField>