force-app/main/default/objects/CD_Property__c/fields/Virtual_Account_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_IBAN__c</fullName>
    <label>Virtual Account IBAN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>