force-app/main/default/objects/CD_Property__c/recordTypes/Building.recordType-meta.xml
<RecordType>
    <fullName>Building</fullName>
    <active>false</active>
    <label>Building</label>
</RecordType>