force-app/main/default/objects/CD_Property__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>false</active>
    <label>Project</label>
</RecordType>