force-app/main/default/objects/CD_Property__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>false</active>
    <label>RecordType</label>
</RecordType>