force-app/main/default/objects/CD_Property__c/validationRules/if_its_agent_profile_cant_change_anythig.validationRule-meta.xml
<ValidationRule>
    <fullName>if_its_agent_profile_cant_change_anythig</fullName>
    <active>false</active>
    <errorConditionFormula>IF(CONTAINS($Profile.Name, &quot;Agent&quot;), True, False)</errorConditionFormula>
    <errorMessage>It is agent profile so can not change anything</errorMessage>
</ValidationRule>