force-app/main/default/objects/CD_Property__c/validationRules/Unit_is_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_is_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Block&quot;),
ISPICKVAL(Reason_for_Block__c  ,&quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Block__c</errorDisplayField>
    <errorMessage>Please select the Reason for Block</errorMessage>
</ValidationRule>