force-app/main/default/objects/CD_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CD_Unit_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CD_View__c</columns>
    <columns>CD_City__c</columns>
    <columns>CD_Floor__c</columns>
    <columns>CD_Bedrooms__c</columns>
    <columns>CD_Internal_Area__c</columns>
    <columns>CD_Balcony_Area__c</columns>
    <columns>CD_Total_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>